fixed image not becoming a circle on safari (mobile & desktop)

--- a/resources/styles/pages/events.css
+++ b/resources/styles/pages/events.css
@@ -114,8 +114,7 @@
 }
 
 
-.event-badge:not(.no-br)  {
-    border-radius: 0 0 100px 100px;
+.event-badge:not(.no-br), .event-badge:not(.no-br) img {
     border-radius: 50%;
 }
 .event-badge img{
